# chordplacer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  chord-placer-plan.md  chord-placer-tasks.md  chord-sheet-annotator-plan.md
backend/: pyproject.toml
backend/app/: charextract.py  main.py
backend/tests/: conftest.py  test_charextract.py  test_endpoints.py
